# osprey

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  main.cpp  osprey_server.cpp  osprey_server.hpp  simulate.cpp  vcpkg.json
application/: BuyerCtrl.cc  BuyerCtrl.h  CMakeLists.txt  EchoWebsock.cc  EchoWebsock.h  TestCtrl.cc  TestCtrl.h  compute_data.py  platform_server.cpp  参数.md
depends/: CMakeLists.txt
depends/gtest/: CMakeLists.txt
depends/gtest/googlemock/: CMakeLists.txt
depends/gtest/googletest/: CMakeLists.txt
depends/libff/: CMakeLists.txt
depends/libfqfft/: CMakeLists.txt
depends/libfqfft/libfqfft/evaluation_domain/: get_evaluation_domain.hpp  get_evaluation_domain.tcc
depends/libfqfft/libfqfft/kronecker_substitution/: kronecker_substitution.hpp
depends/libfqfft/libfqfft/polynomial_arithmetic/: basic_operations.hpp  basic_operations.tcc  basis_change.hpp  basis_change.tcc  naive_evaluate.hpp  xgcd.hpp  xgcd.tcc
depends/libfqfft/libfqfft/tests/: evaluation_domain_test.cpp  kronecker_substitution_test.cpp  polynomial_arithmetic_test.cpp
depends/libfqfft/libfqfft/tools/: serialization.hpp
depends/libfqfft/tutorials/: lagrange_polynomial_evaluation_example.cpp  polynomial_evaluation_example.cpp  polynomial_multiplication_on_fft_example.cpp
libserver/: CMakeLists.txt  Log.hpp  construct_proof.cpp  construct_proof.hpp  network_server.hpp  osprey_server.cpp  osprey_server.hpp  proof_program.cpp  proof_program.hpp  ram_ppsnark_server.cpp  ram_ppsnark_server.hpp  server_provider.cpp  server_provider.h  simulate.cpp  string_helper.hpp  tests.cpp  tinyram_complier_server.cpp  tinyram_complier_server.hpp
libserver/analysis_program/: CMakeLists.txt  analysis_err_code.hpp  analysis_execute_script.py  analysis_program.cpp  analysis_program.hpp
libserver/analysis_program/tests/: analysis_program_tests.cpp
libserver/aux/: Log.hpp  proof_params_config.cpp  proof_params_config.hpp  proof_program.cpp
libserver/aux/tests/: proof_program_tests.cpp
libserver/aux_struct/: Log.hpp  Result.cpp  params_config.cpp  params_config.hpp  proof_params_config.cpp  proof_params_config.hpp  string_helper.hpp
libserver/aux_struct/tests/: log_tests.cpp  params_config_tests.cpp
libserver/proof_systems/: groth16_server.cpp  groth16_server.hpp  groth16_server.tcc  proof_public_params.hpp  proof_public_params.tcc  r1cs_adapter.hpp  r1cs_adapter.tcc  r1cs_constraint_system_pool.hpp  ram_gg_ppsnark_server.hpp  ram_ppsnark_server.cpp  ram_ppsnark_server.hpp  tinyram_circuit.hpp  tinyram_circuit.tcc  tinyram_r1cs_pp.hpp  tinyram_zksnark_pp.hpp
libserver/proof_systems/tests/: groth16_server_tests.cpp  r1cs_adapter_tests.cpp  ram_ppsnark_server_test.cpp  tinyram_circuit_server_tests.cpp
libserver/ram_compiler/: specialization_pool.hpp  specialization_pool.tcc  tinyram_compiler_server.hpp  tinyram_compiler_server.tcc  tinyram_precompiler.cpp  tinyram_precompiler.hpp
libserver/ram_compiler/tests/: compiler_tests.cpp  specialization_pool_tests.cpp  tinyram_precompiler_tests.cpp
libserver/ram_complier/: tinyram_complier_server.hpp  tinyram_complier_server.tcc  tinyram_precompiler.hpp
libserver/smart_contract/: .gitignore  CMakeLists.txt  Payable.sol  README.md  connectEthereum.cpp  connectEthereum.h  connectEthereum.js  connectEthereum.py  contract_tests.cpp  example_main  example_main.cpp
libserver/tests/: groth16_server_tests.cpp  log_tests.cpp  network_test.cpp  proof_program_tests.cpp  proof_public_params_tests.cpp  r1cs_adapter_tests.cpp  ram_ppsnark_gg_server_tests.cpp  ram_ppsnark_server_test.cpp  string_helper_tests.cpp  tinyram_circuit_server_tests.cpp  tinyram_complier_server_test.cpp
libserver/tutorial/avarage/: architecture_params.txt  avarage.json  avarage.s  computation_bounds.txt  const.json  processed_assembly.txt  proof  verification_key
libserver/tutorial/average/: parameter.json
libserver/tutorial/compare/: compare.json  compare.s  parameter.json
tinyram_snark/: CMakeLists.txt
tinyram_snark/common/data_structures/: accumulation_vector.hpp  accumulation_vector.tcc  integer_permutation.cpp  integer_permutation.hpp  merkle_tree.hpp  merkle_tree.tcc  set_commitment.cpp  set_commitment.hpp  set_commitment.tcc  sparse_vector.hpp  sparse_vector.tcc
tinyram_snark/common/default_types/: r1cs_gg_ppzksnark_pp.hpp  r1cs_ppzksnark_pp.hpp  tinyram_gg_ppzksnark_pp.hpp  tinyram_ppzksnark_pp.cpp  tinyram_ppzksnark_pp.hpp
tinyram_snark/common/routing_algorithms/: as_waksman_routing_algorithm.cpp  as_waksman_routing_algorithm.hpp  benes_routing_algorithm.cpp  benes_routing_algorithm.hpp
tinyram_snark/gadgetlib1/: constraint_profiling.cpp  constraint_profiling.hpp  gadget.hpp  gadget.tcc  pb_variable.hpp  pb_variable.tcc  protoboard.hpp  protoboard.tcc
tinyram_snark/gadgetlib1/examples/: simple_example.hpp  simple_example.tcc
tinyram_snark/gadgetlib1/gadgets/: basic_gadgets.hpp  basic_gadgets.tcc  gadget_from_r1cs.hpp  gadget_from_r1cs.tcc
tinyram_snark/gadgetlib1/tests/: gadgetlib1_test.cpp
tinyram_snark/gadgetlib2/: adapters.cpp  adapters.hpp  constraint.cpp  constraint.hpp  gadget.cpp  gadget.hpp  gadgetMacros.hpp  infrastructure.cpp  infrastructure.hpp  integration.cpp  integration.hpp  pp.cpp  pp.hpp  protoboard.cpp  protoboard.hpp  variable.cpp  variable.hpp  variable_operators.hpp
tinyram_snark/gadgetlib2/examples/: simple_example.cpp  simple_example.hpp  tutorial.cpp
tinyram_snark/gadgetlib2/tests/: adapters_UTEST.cpp  constraint_UTEST.cpp  gadget_UTEST.cpp  gadgetlib2_test.cpp  integration_UTEST.cpp  protoboard_UTEST.cpp  variable_UTEST.cpp
tinyram_snark/knowledge_commitment/: kc_multiexp.hpp  kc_multiexp.tcc  knowledge_commitment.hpp  knowledge_commitment.tcc
tinyram_snark/reductions/r1cs_to_qap/: r1cs_to_qap.hpp  r1cs_to_qap.tcc
tinyram_snark/reductions/ram_to_r1cs/: ram_to_r1cs.hpp  ram_to_r1cs.tcc
tinyram_snark/relations/: variable.hpp  variable.tcc
tinyram_snark/zk_proof_systems/r1cs_gg_ppzksnark/: r1cs_gg_ppzksnark.hpp  r1cs_gg_ppzksnark.tcc  r1cs_gg_ppzksnark_params.hpp
(+185 files in other folders)
